--- a/package.json
+++ b/package.json
@@ -56,9 +56,10 @@
     "@types/helmet": "^0.0.48",
     "@types/joi": "^17.2.2",
     "@types/jsonfile": "^6.1.4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^14.18.63",
+    "@types/node": "^22.14.0",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
