--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "google-auth-library": "^9.15.1",
     "helmet": "^4.6.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^5.13.23",
     "morgan": "^1.10.0",
