--- a/package.json
+++ b/package.json
@@ -43,10 +43,7 @@
     "mongoose": "^5.13.23",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.10.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -63,8 +60,6 @@
     "@types/node": "^22.14.0",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
-    "@types/passport": "^1.0.17",
-    "@types/passport-jwt": "^3.0.13",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
