--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
 		"mongoose": "^8.16.0",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
-		"nodemailer": "^6.10.0"
+		"nodemailer": "^6.10.0",
+		"zod": "^4.0.2"
 	},
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.6",
